--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Account/Login.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
 
     <link rel="shortcut icon" href="~/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico">
-    <title>.:: OCRH - Registro de Asistencia Docente ::.</title>
+    <title>OCGTI - Migrador Temporal de pagos</title>
 
     <link href="@Url.Content("~/Assets/bootstrap/css/bootstrap.min.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Assets/font-awesome/css/font-awesome.css")" rel="stylesheet" />
