--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Posgrado.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Posgrado.cshtml
@@ -1,7 +1,38 @@
-﻿
-@{
-    ViewBag.Title = "Posgrado";
+﻿@{
+    string action = ViewBag.Action;
+    string controller = ViewBag.Controller;
 }
 
-<h2>Posgrado</h2>
-
+<div class="py-3">
+    <h1>Posgrado <small>CUOTAS DE PAGO</small></h1>
+</div>
+<div class="row">
+    <div class="col-md-2">
+        <fieldset>
+            <legend class="pb-3 font-weight-bold">OPCIONES</legend>
+            <button class="btn btn-outline-dark btn-block my-3" id="btn-tp">Temporal de pagos</button>
+            <button class="btn btn-outline-dark btn-block my-3" id="btn-mg">Registros para migración</button>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("", "CuotaPago")">
+                Proceso de migración
+            </a>
+        </fieldset>
+    </div>
+    <div class="col-md-10">
+        @if (string.IsNullOrEmpty(action))
+        {
+            <div class="jumbotron" style="min-height: 450px">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        }
+        else
+        {
+            @Html.Action(action, controller)
+        }
+    </div>
+</div>
