--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Posgrado/CuotaPago_migracion_step2.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Posgrado/CuotaPago_migracion_step2.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<WebMigradorCtasPorCobrar.Models.Entities.CuotaPagoTP>
+@model IEnumerable<WebMigradorCtasPorCobrar.Models.Entities.Migracion.CuotaPago>
 @using GridMvc.Html
 
 
