--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Sidebar.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Sidebar.cshtml
@@ -98,7 +98,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Reportes" data-target="#help">
+            <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Reportes" data-target="#reportes">
                 <i class="fa fa-3x bi-clipboard-data"></i><br />Reportes
             </a>
         </li>
