--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Cuded.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Cuded.cshtml
@@ -1,7 +1,10 @@
 ﻿
 @{
+    ViewBag.Title = "CUOTAS DE PAGO";
+
     string action = ViewBag.Action;
     string controller = ViewBag.Controller;
+    var procedencia_value = WebMigradorCtasPorCobrar.Models.Helpers.Procedencia.Cuded;
 }
 
 <div class="py-3">
@@ -11,9 +14,9 @@
     <div class="col-md-2">
         <fieldset>
             <legend class="pb-3 font-weight-bold">OPCIONES</legend>
-            <button class="btn btn-outline-dark btn-block my-3" id="btn-tp">Temporal de pagos</button>
-            <button class="btn btn-outline-dark btn-block my-3" id="btn-mg">Registros para migración</button>
-            <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("", "CuotaPago")">
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-tp" href="@Url.Action("Cuded", "CuotaPago", new { partial = "TemporalPagos" })">Temporal de pagos</a>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-mg" href="@Url.Action("Cuded", "CuotaPago", new { partial = "DatosMigracion" })">Registros para migración</a>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("Cuded", "CuotaPago", new { partial = "ProcesoMigracion" })">
                 Proceso de migración
             </a>
         </fieldset>
@@ -33,7 +36,7 @@
         }
         else
         {
-            @Html.Action(action, controller)
+            @Html.Action(action, controller, new { procedencia = procedencia_value })
         }
     </div>
 </div>
