--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_TemporalPagos.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_TemporalPagos.cshtml
@@ -6,13 +6,13 @@
     @Html.Grid(Model).Columns(columns =>
         {
             columns.Add(c => c.Cuota_pago).Titled("Codigo").Filterable(true);
-            columns.Add(c => c.Descripcio).Titled("Descripción").Filterable(true);
             columns.Add(c => c.N_cta_cte).Titled("Nro. Cuenta").Filterable(true);
-            columns.Add(c => c.Eliminado).Titled("Eliminado").Filterable(true);
-            columns.Add(c => c.Codigo_bnc).Titled("Codigo BNC").Filterable(true);
-            columns.Add(c => c.Fch_venc).Titled("Fec. Venc").Filterable(true);
-            columns.Add(c => c.Prioridad).Titled("Prioridad").Filterable(true);
-            columns.Add(c => c.C_mora).Titled("Mora").Filterable(true);
+            columns.Add(c => c.Descripcio).Titled("Descripción").Filterable(true);
+            columns.Add(c => c.Eliminado).Css("text-center").Titled("Eliminado").Filterable(true);
+            columns.Add(c => c.Codigo_bnc).Css("text-center").Titled("Codigo BNC").Filterable(true);
+            columns.Add(c => c.Fch_venc).Css("text-center").Titled("Fec. Venc").Filterable(true);
+            columns.Add(c => c.Prioridad).Css("text-center").Titled("Prioridad").Filterable(true);
+            columns.Add(c => c.C_mora).Css("text-center").Titled("Mora").Filterable(true);
         }
     ).WithPaging(20).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
 </div>
