--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_TemporalPagos.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_TemporalPagos.cshtml
@@ -9,10 +9,10 @@
         columns.Add(c => c.C_RcCod).Titled("Cod Carrera").Filterable(true);
         columns.Add(c => c.T_NomCompleto).Titled("Nombre Completo").Filterable(true);
         columns.Add(c => c.C_NumDNI).Titled("Num. Documento").Filterable(true);
-        columns.Add(c => c.C_CodTipDo).Titled("Tipo Doc.").Filterable(true);
-        columns.Add(c => c.C_Sexo).Titled("Sexo").Filterable(true);
-        columns.Add(c => c.C_CodModIn).Titled("Cod. Ingreso").Filterable(true);
-        columns.Add(c => c.C_AnioIngr).Titled("Monto").Filterable(true);
+        columns.Add(c => c.C_CodTipDo).Css("text-center").Titled("Tipo Doc.").Filterable(true);
+        columns.Add(c => c.C_Sexo).Css("text-center").Titled("Sexo").Filterable(true);
+        columns.Add(c => c.C_CodModIn).Css("text-center").Titled("Cod. Ingreso").Filterable(true);
+        columns.Add(c => c.C_AnioIngr).Css("text-center").Titled("Año Ingreso").Filterable(true);
     }
     ).WithPaging(20).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
 </div>
