--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_DatosMigracion.cshtml
@@ -14,7 +14,7 @@
         columns.Add(c => c.Prioridad).Css("text-center").Titled("Prioridad").Filterable(true);
         columns.Add(c => c.C_mora).Titled("Mora").Filterable(true);
         columns.Add(c => c.B_Migrable).Css("text-center").Titled("Migrable").Filterable(true);
-        columns.Add(c => c.Eliminado).Css("text-center").Titled("Eliminado").Filterable(true)
+        columns.Add(c => c.Eliminado).Css("text-center").Titled("Eliminado").Filterable(true);
         columns.Add().SetWidth(150).Css("text-right").Encoded(false).Sanitized(false)
                     .RenderValueAs(model => model.B_Migrable ?
                                         @Html.Raw("")
